plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	mavenLocal()
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	localRuntime "fr.hardel:mapple:${project.mapple_version}"
	testRuntimeOnly "fr.hardel:mapple:${project.mapple_version}"

	testImplementation platform("org.junit:junit-bom:5.12.2")
	testImplementation "org.junit.jupiter:junit-jupiter"
	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

loom {
	accessWidenerPath = file("src/main/resources/leafs.accesswidener")

	runs {
		configureEach {
			vmArg "-ea"
			vmArg "-XX:+UseZGC"
		}

		client {
			vmArg "-Xmx3G"
		}

		server {
			vmArg "-Xms14G"
			vmArg "-Xmx14G"
			vmArg "-XX:+AlwaysPreTouch"
		}
	}
}

test {
	useJUnitPlatform()
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}
